objects/NettingGroupBranch__c.object
<CustomObject>
    <fields>
        <fullName>BranchType__c</fullName>
        <label>Branch Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Trade Instrument</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NettingGroup__c</fullName>
        <label>Netting Group</label>
        <referenceTo>Netting_Group__c</referenceTo>
        <relationshipLabel>Netting Group Branches</relationshipLabel>
        <relationshipName>Netting_Group_Branchs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Netting Group Branches</relationshipLabel>
        <relationshipName>Netting_Group_Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Instrument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Instrument</label>
        <referenceTo>Trade_Instrument__c</referenceTo>
        <relationshipLabel>Netting Group Branches</relationshipLabel>
        <relationshipName>Netting_Group_Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Netting Group Branch</label>
    <nameField>
        <displayFormat>NGB-{0000}</displayFormat>
        <label>Netting Group Branch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Netting Group Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>